--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -8,11 +8,11 @@
     <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon.png"/>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"/>
     <link href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" rel="stylesheet"/>
-    <title>Book your Service</title>
+    <title>GRÚAS VIP</title>
     <meta name="description" content="Manage bookings, request quotes, or book a online service with our simple and quick online booking system. We are an on-demand services company that allows guests to easily book various services online. We offer the best services in the country. " data-rh="true">
 </head>
 <body style="background-color:#f4f6f9">
-    <noscript> You need to enable JavaScript to run this app. </noscript>
+    <noscript> Grúas VIP requiere de Javascript para un rendimiento optimo. </noscript>
     <div id="root"></div>
 </body>
 </html>
